--- a/Combined/Ritav/Causes/causes.css
+++ b/Combined/Ritav/Causes/causes.css
@@ -1,6 +1,6 @@
 * {
-  padding: 2px;
   font-family: Georgia, "Times New Roman", Times, serif;
+  text-align: justify;
 }
 
 @import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
@@ -8,6 +8,7 @@ body {
   font-family: "Open Sans", sans-serif;
   background: rgb(29, 28, 28);
 }
+
 nav {
   position: relative;
   width: 100%;
@@ -106,11 +107,6 @@ nav a:nth-child(9):hover ~ .animation {
 
 @import url("http://fonts.googleapis.com/css?family=Open+Sans:400,700");
 
-* {
-  padding: 0;
-  margin: 0;
-}
-
 h2 {
   color: #2b2b2b;
   font-family: Georgia, "Times New Roman", Times, serif;
@@ -123,6 +119,11 @@ h2 {
 .listt {
   width: 684px;
   margin-bottom: 25px;
+  font-size: 20px;
+}
+
+li {
+  padding: 15px;
 }
 
 .pic {
@@ -148,7 +149,6 @@ h2 {
 }
 
 .pack {
-  /* width: 20%; */
   right: 0;
   margin-left: 10px;
   margin-top: 10px;
