--- a/Combined/Yash/Blog/styles.css
+++ b/Combined/Yash/Blog/styles.css
@@ -107,6 +107,10 @@ h1 {
 .accordion-item:target .accordion-link .ion-md-remove {
   display: block;
 }
+* {
+  padding: 2px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
 
 @import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
 body {
@@ -122,7 +126,7 @@ nav {
   font-size: 0;
   box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.1);
   display: flex;
-  margin-bottom: 60px;
+  margin-bottom: 2px;
 }
 nav a {
   font-size: 15px;
@@ -140,8 +144,10 @@ nav .animation {
   height: 100%;
   top: 0;
   z-index: 0;
-  background: #1abc9c;
+  background: #41becc;
+
   border-radius: 8px;
+
   transition: all 0.5s ease 0s;
 }
 nav a:nth-child(1) {
@@ -166,6 +172,7 @@ nav a:nth-child(3):hover ~ .animation {
   width: 100px;
   left: 210px;
 }
+
 nav a:nth-child(4) {
   width: 120px;
 }
@@ -216,15 +223,47 @@ nav a:nth-child(9):hover ~ .animation {
   margin: 0;
 }
 
-html {
-  background-color: #eaf0f2;
+h2 {
+  color: #2b2b2b;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  padding: 20px;
+  align-items: center;
+  justify-content: center;
 }
 
-body {
-  font: 16px/1.6 Arial, sans-serif;
+.para,
+.listt {
+  width: 684px;
+  margin-bottom: 25px;
 }
 
-/* The footer is fixed to the bottom of the page */
+.pic {
+  margin: 20px;
+}
+
+.iconDetails {
+  margin-left: 2%;
+  float: right;
+}
+
+.pack {
+  /* width: 20%; */
+  right: 0;
+  margin-left: 10px;
+  margin-top: 10px;
+  margin-right: 10px;
+  padding: 10px;
+}
+iframe {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.card {
+  margin: 20px;
+  padding: 10px;
+}
 
 footer {
   position: fixed;
