--- a/Combined/Yash/solutions/styles.css
+++ b/Combined/Yash/solutions/styles.css
@@ -1,4 +1,119 @@
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+html {
+  font-family: "Roboto", sans-serif;
+  font-size: 10px;
+  box-sizing: border-box;
+  background-color: #eaf0f2;
+}
+
+body {
+  font: 16px/1.6 Arial, sans-serif;
+}
+
+section {
+  width: 100%;
+  height: 100vh;
+  background-color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+h1 {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  margin-bottom: 60px;
+  color: #1abc9c;
+  font-size: 500%;
+  text-align: center;
+  font-style: italic;
+  text-shadow: 2px 2px 2px #cccccc;
+}
+
+.container {
+  width: 100%;
+  max-width: 80rem;
+  margin: 0 auto;
+  padding: 0 1.5rem;
+}
+
+.accordion-item {
+  background-color: black;
+  border-radius: 0.4rem;
+  padding: 10px;
+  box-shadow: 0.5rem 2px 0.5rem rgba(0, 0, 0, 0.1);
+  margin: 15px;
+}
+
+.accordion-link {
+  font-size: 2rem;
+  color: rgba(255, 255, 255, 0.8);
+  text-decoration: none;
+  background-color: black;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem 0;
+}
+
+.accordion-link i {
+  color: #e7d5ff;
+  padding: 0.5rem;
+}
+
+.accordion-link ion-md-remove {
+  display: none;
+}
+
+.answer {
+  max-height: 0;
+  overflow: hidden;
+  position: relative;
+  background-color: black;
+  transition: max-height 650ms;
+}
+
+.answer::before {
+  content: "";
+  position: absolute;
+  width: 0.6rem;
+  height: 90%;
+  background-color: #1abc9c;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+}
+
+.answer p {
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 1.4rem;
+  padding: 2rem;
+  font-size: medium;
+}
+
+.accordion-item:target .answer {
+  max-height: 20rem;
+}
+
+.accordion-item:target .accordion-link .ion-md-add {
+  display: none;
+}
+
+.accordion-item:target .accordion-link .ion-md-remove {
+  display: block;
+}
 * {
+  padding: 2px;
   font-family: Georgia, "Times New Roman", Times, serif;
 }
 
@@ -7,11 +122,6 @@ body {
   font-family: "Open Sans", sans-serif;
   background: rgb(29, 28, 28);
 }
-
-p {
-  text-align: justify;
-}
-
 nav {
   position: relative;
   width: 100%;
@@ -39,8 +149,10 @@ nav .animation {
   height: 100%;
   top: 0;
   z-index: 0;
-  background: #1abc9c;
+  background: #41becc;
+
   border-radius: 8px;
+
   transition: all 0.5s ease 0s;
 }
 nav a:nth-child(1) {
@@ -65,6 +177,7 @@ nav a:nth-child(3):hover ~ .animation {
   width: 100px;
   left: 210px;
 }
+
 nav a:nth-child(4) {
   width: 120px;
 }
@@ -110,6 +223,11 @@ nav a:nth-child(9):hover ~ .animation {
 
 @import url("http://fonts.googleapis.com/css?family=Open+Sans:400,700");
 
+* {
+  padding: 0;
+  margin: 0;
+}
+
 h2 {
   color: #2b2b2b;
   font-family: Georgia, "Times New Roman", Times, serif;
@@ -122,11 +240,6 @@ h2 {
 .listt {
   width: 684px;
   margin-bottom: 25px;
-  font-size: 20px;
-}
-
-li {
-  padding: 15px;
 }
 
 .pic {
@@ -138,27 +251,14 @@ li {
   float: right;
 }
 
-.side {
-  margin: 0px;
-}
-
-.row {
-  width: 700px;
-}
-
-.column {
-  flex: 50%;
-  padding: 10px;
-}
-
 .pack {
+  /* width: 20%; */
   right: 0;
   margin-left: 10px;
   margin-top: 10px;
   margin-right: 10px;
   padding: 10px;
 }
-
 iframe {
   display: block;
   margin-left: auto;
@@ -168,7 +268,6 @@ iframe {
 .card {
   margin: 20px;
   padding: 10px;
-  font-size: 20px;
 }
 
 footer {
@@ -349,30 +448,4 @@ footer {
   .footer-distributed .footer-center i {
     margin-left: 0;
   }
-}
-
-.card:hover {
-  transform: scale(1.03);
-  box-shadow: 20px 20px 20px rgba(245, 245, 245, 0.12),
-    10px 10px 10px rgba(48, 36, 36, 0.06);
-}
-
-.image-container {
-  position: relative;
-}
-
-.fade::after {
-  content: "PLANETS";
-  background-color: black;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  right: 0;
-  opacity: 0;
-  transition: opacity 0.5s ease;
-}
-
-.fade:hover::after {
-  opacity: 0.5;
 }
